--- a/wisebeat-frontend/src/index.css
+++ b/wisebeat-frontend/src/index.css
@@ -1,4 +1,5 @@
 body {
+  background-color: white;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
@@ -16,6 +17,53 @@ code {
   color: red;
 }
 
+.container {
+  background-color: white;
+  max-width:1196px;
+  height: 750px;
+  margin: 0 auto;
+  border: solid 2px lightgray;
+}
+
 .landing-site {
-  color: blue;
+  color: black;
+  text-align: center;
+}
+
+.navigation-bar {
+  background-color: lightskyblue;
+  display: block;
+  height: 90px;
+  border-bottom: solid 2px lightgray;
+}
+
+.login-button {
+  background-color: lightblue;
+  height: 40px;
+  width: 100px;
+  text-align: center;
+  position: absolute;
+  top: 350px;
+  left: 750px;
+  border-radius: 4px;
+}
+
+.signup-button {
+  height: 40px;
+  width: 100px;
+  text-align: center;
+  position: absolute;
+  top: 350px;
+  left: 1050px;
+  border-radius: 4px;
+}
+
+.signup-button-navbar {
+  height: 40px;
+  width: 100px;
+  text-align: center;
+  position: absolute;
+  border-radius: 4px;
+  left: 90%;
+  top: 5%;
 }
