--- a/wisebeat-frontend/src/index.css
+++ b/wisebeat-frontend/src/index.css
@@ -18,11 +18,11 @@ code {
 }
 
 .container {
-  background-color: white;
-  max-width:1196px;
-  height: 750px;
+  background-color: 7c7c7c;
+  width: 100%;
+  height: 100%;
   margin: 0 auto;
-  border: solid 2px lightgray;
+  border: solid 2px 7c7c7c;
 }
 
 .landing-site-title {
